fixed block jumps when loading images for BlogCard

--- a/src/components/BlogCard/blog-card.sass
+++ b/src/components/BlogCard/blog-card.sass
@@ -1,6 +1,7 @@
 @import 'shared-style.sass'
 
 .blog-card
+    width: 100%
     border-right: 1px solid #d0d0d0
     border-bottom: 1px solid #d0d0d0
     padding: 1.75rem
@@ -14,6 +15,7 @@
             transform: scale(1.07)
     &__head
         position: relative
+        padding-top: 75%
     &__category
         position: absolute
         max-width: 62%
@@ -24,6 +26,9 @@
         color: $light-white
     &__img
         transition: all 350ms ease-out
+        position: absolute
+        top: 0
+        width: 100%
     &__content
         margin-top: 1.25rem
     &__author
